--- a/WYSSaveUtils.csproj
+++ b/WYSSaveUtils.csproj
@@ -42,9 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SetContent.cs" />
     <Compile Include="SaveContent.cs" />
     <Compile Include="SaveLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetLoader.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
