--- a/WYSSaveUtils.csproj
+++ b/WYSSaveUtils.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KeyBinds.cs" />
+    <Compile Include="KeyBindsContent.cs" />
     <Compile Include="SetContent.cs" />
     <Compile Include="SaveContent.cs" />
     <Compile Include="SaveLoader.cs" />
@@ -50,9 +52,13 @@
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="readme.md">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="rooms.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
